# OmniSpeech-A-Hybrid-DSP-Voice-Transformation

./: .gitignore  CLAUDE.md  Launch OmniSpeech.vbs  README.md  THIRD_PARTY_NOTICES.md  freevc_rvc_opencv_aktivasyon_plani.md  gorev_dagilimi_plani.md  index.html  package-lock.json  package.json  pyrefly.toml  requirements-ai.txt  requirements-applio.txt  requirements-live.txt  requirements-rvc.txt  requirements.txt  run_omnispeech.bat  speech_warping_ui_mockup.html  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts  yarin_eksik_gorev_plani.md
OmniSpeech_WPF/: App.xaml  App.xaml.cs  run_wpf_frontend.bat
OmniSpeech_WPF/Controls/: MetricCard.xaml  MetricCard.xaml.cs  PitchContourView.xaml  PitchContourView.xaml.cs  WaveformView.xaml  WaveformView.xaml.cs
OmniSpeech_WPF/Converters/: PendingToBrushConverter.cs
backend/: __init__.py  config.py  server.py
core/: __init__.py  evaluation.py  input_module.py  output_module.py  preprocessing.py
modules/: __init__.py  emotion_conversion.py  gender_age_conversion.py  singing_voice.py  speaker_conversion.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  commands.rs  main.rs  types.rs
src/lib/: tauri.ts
tests/: test_backend_pipeline.py  test_freevc_quality.py  test_input.py  test_modules.py  test_performance.py  test_preprocessing.py  test_rvc_activation.py
ui/: main_window.py  parameter_panel.py  pitch_graph.py  waveform_widget.py
utils/: __init__.py  audio_utils.py  logger.py
(+72 files in other folders)
