[package]
name = "omnispeech_desktop"
version = "0.1.0"
edition = "2021"
description = "OmniSpeech Tauri shell"
authors = ["OmniSpeech Team"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

[features]
default = []
